Updated game ordering in admin game list page, as well as correctly some misaligned elements on the user game list page

--- a/src/Platformd/SpoutletBundle/Resources/public/css/new.css
+++ b/src/Platformd/SpoutletBundle/Resources/public/css/new.css
@@ -531,6 +531,7 @@ ul.list-normal {
 .games-list-page .left ul.games li {
     list-style-type: none;
     width: 195px;
+    height: 110px;
     float: left;
     margin: 8px 0 8px 14px;
     text-align: center;
